# fibery-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
src/fibery_mcp_server/: fibery_client.py  server.py  utils.py
src/fibery_mcp_server/tools/: __init__.py  create_entities_batch.py  create_entity.py  download_attachments.py  query.py
src/fibery_mcp_server/tools/descriptions/: create_entities_batch  create_entity  download_attachments
